--- a/fileA.html
+++ b/fileA.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Master</title>
+    <title>Hotfix</title>
 </head>
 <body>
-
+Develop
 </body>
 </html>
